fix: calculate equal, exact, percentage split